# django-pyhub-components

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: conf.py  index.md  requirements.txt
docs/_static/: custom.css
docs/templates/: layout.html
src/pyhub_components/: __init__.py  apps.py  urls.py
src/pyhub_components/static_src/: package-lock.json  package.json  tailwind.config.js
tests/: conftest.py  manage.py
tests/accounts/: views.py
tests/myproj/: asgi.py  settings.py  urls.py
